[tool.poetry]
name = "rsyncS3"
version = "0.1.0"
description = "Utility for downloading objects from Amazon's S3 cloud storage platform."
license = "MIT"
authors = ["Dephy Inc. <software@dephy.com>"]
readme = "README.md"
repository = "https://www.github.com/DephyInc/rsyncS3"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.63"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
pre-commit = "^2.20.0"
nox = "^2022.8.7"
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88 


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = "missing-module-docstring,invalid-name"
